	- Add for/aft/side/top/bot RCS readout to the On-Screen Telem debug option when ASPECTED_RCS is enabled.
- Competition:
	- Fix a bug in the score window for teams competitions.
	- Automatically enable the teams score toggle in the score window if the "Teams" slider in the vessel spawner window is set to teams mode on start-up.

v1.6.4.0
IMPROVEMENTS / FIXES
- General:
	- Make ammo consumption respect staging and priority order unless "externalAmmo = false" in the weapon config.
	- Don't auto-switch vessels when MouseAimFlight is active.
	- Fixed an issue where modules on a vessel re-entering the PRE range weren't being updated in the VesselModuleRegistry.
	- Fix a number of issues with Pwing+FAR HP calc.
	- PWing Thickness-based Mass+HP now takes PWing Edges into account if PWing Edge Lift enabled.
	- Fix armored cockpit mass resetting on load.
	- Add search tags to all BDA parts.
- AI:
	- Make the autotuning re-centering distance customisable.
	- Add unclamped max values for auto-tuning speed and altitude.
	- Prevent weapon selection from choosing weapons when target is closer than the weapon's minSafeDistance.
	- Fix AI potentially seeing beyond viewrange.
	- Increase preemptive lead distance AI will begin leading target before entering engagement range.
	- AI will now switch off of Afterburner if AB is out of fuel (for Rapiers/other LF/non-air AB-mode engines).
- Vessel Spawning:
	- Disable gravity easing when using 'Warp Here' above 10m altitude.
- Vessel Mover:
	- Add support for browsing craft in subfolders of the SPH and VAB (also in the custom spawn templates).
	- Allow resizing the vessel selection window and remember its position.
- Weapons:
	- Fix various NREs related to missiles and multi-missile launchers.
	- Adds optional tracer smoke.
		- new 'smokeTexturePath' setting for ModuleWeapon to set custom smoke trail FX, leave blank for default bullet FX
	- Properly support weapons with multiple ModuleWeapon modules.